  be executed when a breakpoint is reached.

- Conditional breakpoints, temporary breakpoints, and breakpoints with
  ignore counts now have their special symbols on their own.

- Value tips and selections work for struct members, too: you can
  point at `A.B', `A->B', or `A::B' and get the current value.

- Entering `list X' at the debugger prompt shows X in the source
  window.

- DDD no longer indents the source code, leaving more horizontal
  space.  See `Edit->Preferences->Source->Source indentation'.

- The maximum number of glyphs is now configurable at startup time.
  See the `maxGlyphs' resource for details.

- On popular demand, the command tool has two new buttons:
  * `until' runs the program until a line greater than the current is
    reached or the current stack frame is exited.  Requires GDB.
  * `make' invokes the `make' program.


Data exploration
----------------

- Watchpoints.  You can have the debugged program stop automatically
  whenever a particular variable is read or written.

- In `stacked window' configuration, the data window automatically
  pops up as soon as some value is displayed, and it pops down as soon
  as the last visible display is deleted.

- You can easily display variable values in the data window by
  double-clicking on an occurrence.

- The `Undisplay ()' button also deletes all aliases of the selected
  display.  See the `deleteAliasDisplays' resource for details.

- Deleting all displays at once requires confirmation from GDB.

- Using GDB, VALUEs that are repeated N times are now displayed as
  `VALUE <Nx>', saving space in the data display; see `Edit->GDB
  Settings->Threshold for repeated print elements'.  Setting the
  `expandRepeatedValues' resource to `on' turns this off.

- Displays are persistent across recompilation.  This is achieved via
  `deferred' displays, whose creation is deferred until a particular
  scope is entered.  In the same veine, displays are also persistent